<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">Check the status</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>


    <string name="glide_filename">Glide - Image Loading Library by BumpTech</string>
    <string name="udacity_filename">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_filename">Retrofit - Type-safe HTTP client for Android and Jave by Square, Inc</string>

    <string name="alert_toast">Please select the file to download</string>

    <string name="channel_id">download_complete_channel</string>
    <string name="channel_name">Download Complete</string>
    <string name="channel_decription">Download Complete</string>

    <string name="file_name">File Name: </string>
    <string name="status">Status: </string>
    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>

</resources>
